--- a/server/client/css/openipf.scss
+++ b/server/client/css/openipf.scss
@@ -31,7 +31,6 @@ $table-row-height: 18px;
 
 // Definitions for media queries.
 $mobile-cutoff: 600px;
-$breakpoint-tablet: 767px;
 
 // External things that are hopefully pretty small.
 @import "../node_modules/slickgrid/slick.grid";
